# django-pollsystem

./: .gitignore  README.md  db.sqlite3  pyproject.toml
pollproject/: settings.py
polls/: models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html  index.html  results.html
