[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["bp20110"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.4"
django-debug-toolbar = "^4.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
